--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,13 @@
     <application
         android:allowBackup="true"
         android:label="MusicPlayer"
-        android:icon="@mipmap/ic_launcher"
-        android:supportsRtl="true">
-        
-        <activity
+        android:supportsRtl="true"
+        android:icon="@drawable/ic_launcher"> <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"> <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
